Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23132

static Qt 4.8RC compilation with -openssl-linked wont compile

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.1
    • 4.8.0
    • Network: SSL
    • None
    • Mac OS X Lion
    • 007f01a7e801d5409708e4b8de8b3ead1481cf7d, 4db91cbd6147e40f543342f22c05b7baddc52e5a

      This issue can be reproduced with openSSL versions 0.9.8 and 1.0.

      Here's the error:

      kernel -I.moc/release-static -o .obj/release-static/qsslsocket_openssl_symbols.o ssl/qsslsocket_openssl_symbols.cpp
      ssl/qsslsocket_openssl_symbols.cpp: In function 'long int q_SSL_ctrl(SSL*, int, long int, const void*)':
      ssl/qsslsocket_openssl_symbols.cpp:197: error: invalid conversion from 'const void*' to 'void*'
      ssl/qsslsocket_openssl_symbols.cpp:197: error: initializing argument 4 of 'long int SSL_ctrl(SSL*, int, long int, void*)'
      make[2]: *** [.obj/release-static/qsslsocket_openssl_symbols.o] Error 1
      make[1]: *** [release] Error 2
      make: *** [sub-network-make_default-ordered] Error 2

      Configure options:
      ./configure -prefix /Volumes/Data/Qt-4.8.0-static-x86_64 -release -commercial -largefile -static -no-framework -no-openssl -arch x86_64 -qt-libpng -qt-libjpeg -nomake examples -nomake demos -no-phonon-backend -no-phonon -no-qt3support -nomake tests -platform macx-g++42 -sdk /Developer/SDKs/MacOSX10.7.sdk -no-exceptions -nomake tools -nomake docs -openssl-linked

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            phartman Peter Hartmann (closed Nokia identity) (Inactive)
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes